Fri Mar  6 18:37:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, Makefile.in, win32/Makefile.sub (CHDIR): cd using
	  phisical directory.

Fri Mar  6 14:28:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, win32/Makefile.sub (INSNS): moved variable
	  definition before rule.

Fri Mar  6 13:47:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rake/loaders/makefile.rb (Rake::MakefileLoader#load): deals with
	  escaped spaces.  incorporated from rake 0.8.4.

	* lib/rake/testtask.rb (Rake::TestTask#define): passes each libs
	  as each arguments with expanded.  incorporated from rake 0.8.4.

Thu Mar  5 18:36:38 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (flo_to_s): keeps enough precision for round trip.
	  [ruby-core:22325]

Thu Mar  5 17:42:06 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_fill): doc for Array#fill misses indication
	  about negative value for the start argument.  [ruby-core:22497]

Thu Mar  5 16:56:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tmpdir.rb (Dir.tmpdir): not use USERPROFILE, and ignores
	  non-existent directory.

Thu Mar  5 14:52:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_sysinit): initializes version info first.

	* win32/win32.c (rb_w32_osid): always define for binary compatibility.

Thu Mar  5 11:52:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (make_insns_rules): rule to make rules for insns.

Thu Mar  5 11:27:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (miniruby.exe): workaround for a failure of
	  mt.exe on Windows 7 beta.  [ruby-talk:330284]

Thu Mar  5 10:32:17 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/dl/test_base.rb: Add dragonfly to libc and libm switch.

Thu Mar  5 10:29:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_eql): extracted from rb_str_equal and rb_str_eql.

	* string.c (rb_str_chomp_bang): keeps 7bit coderange.
