@@ -1,7 +1,11 @@
-Fri Mar  6 18:37:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Fri Mar  6 18:46:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in, Makefile.in, win32/Makefile.sub (CHDIR): cd using
 	  phisical directory.
+
+	* Makefile.in (update-mspec): split from update-rubyspec.
+
+	* win32/Makefile.sub (update-{rubyspec,mspec}): added.
 
 Fri Mar  6 14:28:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
